# rss-feed-wrapper

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/rss_feed_wrapper/: __init__.py  config.py  db.py  logging_setup.py  main.py  models.py  parser.py  rss.py  service.py
src/rss_feed_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_db.py  test_parallelism.py  test_parser.py  test_resilience.py
